--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -33,7 +33,8 @@ body {
   color: var(--font-color);
   display: grid;
   grid: "header header header header" auto 
-        "projects tasks tasks tasks " auto / 
+        "projects tasks tasks tasks " 76vh
+        "footer footer footer footer" 50px/ 
         350px minmax(250px, auto) 1fr 1fr;
 }
 
@@ -82,6 +83,7 @@ body h1 {
   list-style: none;
   width: 100%;
   font-size: 2rem;
+  margin-bottom: 0.2rem;
   cursor: pointer;
   border-radius: 5px;
   transition: background-color 200ms ease-in-out;
@@ -248,6 +250,59 @@ body h1 {
   transform-origin: left;
 }
 
+.task-properties {
+  display: flex;
+  justify-content: space-between;
+  width: 13rem;
+}
+
+.task-property {
+  background-color: transparent;
+  border: 2px solid var(--font-color);
+  color: var(--font-color);
+  padding: 0.2rem 1rem;
+  cursor: pointer;
+}
+
+.task-property.notes {
+  transition: color 150ms;
+}
+
+.task-property.notes:hover {
+  color: var(--green-color);
+  border: 2px solid var(--green-color);
+}
+
+.task-property.due-date {
+  transition: border-color 300ms ease-in-out;
+}
+
+.task-property.due-date:hover {
+  border-color: var(--secondary-color);
+}
+
+.task-property.delete-task:hover {
+  color: red;
+  border: 2px solid red;
+}
+
+.add-task {
+  font-size: 2rem;
+  font-weight: 700;
+  font-style: italic;
+  width: 100%;
+  text-align: center;
+  padding: 0.5rem;
+  margin: 0;
+  border-top: 2px solid black;
+  transition: border 200ms ease-in-out;
+}
+
+.add-task:hover {
+  color: var(--green-color);
+  border: 2px solid black;
+}
+
 /* <div class="todo-list">
 <div class="todo-header">
   <h2>Project Name</h2>
@@ -276,4 +331,24 @@ body h1 {
 
 .form {
   display: none;
+}
+
+.footer {
+  grid-area: footer;
+  display: flex;
+  align-items: center;
+  width: 100%;
+  height: 2.5rem;
+}
+
+.footer-contents {
+  text-align: center;
+  width: 100%;
+}
+
+.footer-contents span a{
+  margin: 0.5rem;
+  text-decoration: none;
+  font-weight: 700;
+  color: var(--font-color);
 }
