--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -49,6 +49,8 @@ body h1 {
   border-radius: var(--border-radius);
 }
 
+/* project list  */
+
 .all-projects {
   grid-area: projects;
   background-color: var(--secondary-color);
@@ -127,6 +129,8 @@ body h1 {
   color: var(--green-color);
 }
 
+/* task list  */
+
 .todo-list {
   grid-area: tasks;
   background-color: var(--secondary-color);
@@ -161,6 +165,24 @@ body h1 {
   margin: 0;
   padding: 0.1rem;
   text-align: end;
+}
+
+#project-name-edit { 
+  font-size: 3.8rem;
+  padding-left: 0.5rem;
+}
+
+#project-description-edit {
+  font-size: 2rem;
+  padding-left: 0.5rem;
+  width: 100%;
+}
+
+.edit-project {
+  width: 7rem;
+  height: 3rem;
+  font-size: 2rem;
+  border: 2px solid var(--main-color);
 }
 
 .edit {
@@ -202,10 +224,10 @@ body h1 {
 
 .task:hover .custom-checkbox,
 [type="checkbox"]:focus + label .custom-checkbox {
-  transform: scale(1.2);
+  transform: scale(1.15);
 }
 
-[type="checkbox"]:checked + label .custom-checkbox {
+[type="checkbox"]:checked + label .custom-checkbox{
   background: var(--green-color);
   box-shadow: inset 0 0 0px 1px var(--secondary-color);
 }
@@ -219,11 +241,11 @@ body h1 {
   justify-content: space-between;
   font-size: 2.4rem;
   padding: 0.5rem;
+  border-radius: 5px;
 }
 
 .task:hover {
   background-color: var(--main-color);
-  
 }
 
 .task label {
@@ -253,7 +275,7 @@ body h1 {
 .task-properties {
   display: flex;
   justify-content: space-between;
-  width: 13rem;
+  width: 8rem;
 }
 
 .task-property {
@@ -263,7 +285,7 @@ body h1 {
   padding: 0.2rem 1rem;
   cursor: pointer;
 }
-
+/* 
 .task-property.notes {
   transition: color 150ms;
 }
@@ -271,14 +293,19 @@ body h1 {
 .task-property.notes:hover {
   color: var(--green-color);
   border: 2px solid var(--green-color);
-}
+} */
 
 .task-property.due-date {
-  transition: border-color 300ms ease-in-out;
+  transition: border-color 300ms ease-in-out, color 500ms;
 }
 
 .task-property.due-date:hover {
+  color: var(--border-color);
   border-color: var(--secondary-color);
+}
+
+.task-property.delete-task {
+  transition: border-color 300ms ease-in-out, color 500ms;
 }
 
 .task-property.delete-task:hover {
@@ -303,35 +330,94 @@ body h1 {
   border: 2px solid black;
 }
 
-/* <div class="todo-list">
-<div class="todo-header">
-  <h2>Project Name</h2>
-  <h3>Project Description</h3>
-</div>
-<div class="todo-body">
-  <div class="tasks">
-    <!-- to add due date, edit btn, delete btn -->
-    <div class="task">
-      <input type="checkbox" id="task-1"/>
-      <label for="task-1">
-        <span class="custon-checkbox"></span>
-        This is a todo
-      </label>
-    </div>
-    <div class="task">
-      <input type="checkbox" id="task-1"/>
-      <label for="task-2">
-        <span class="custon-checkbox"></span>
-        This is a todo 2
-      </label>
-    </div>
-  </div>
-</div>
-</div> */
+.new-task {
+  border-top: 2px solid black;
+  padding: 0.5rem;
+  display: flex;
+  justify-content: space-between;
+}
+
+.new-task:hover {
+  background-color: var(--main-color);
+}
+
+.new-task [type="text"] {
+  font-size: 1.5rem;
+  width: 20%;
+}
+
+/* forms  */
 
 .form {
-  display: none;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  border: 3px solid var(--border-color);
+  border-radius: var(--border-radius);
+  background-color: var(--secondary-color);
+  padding: 0.2rem;
 }
+
+.form-element {
+  margin: 1.5rem;
+}
+
+.form-element label, input{
+  font-size: 3rem;
+  border-radius: 5px
+}
+
+.form-element input[type="text"] { 
+  border: 3px solid var(--border-color); 
+  padding: 0.2rem;
+  padding-left: 0.5rem;
+  background-color: var(--main-color);
+  color: var(--border-color);
+  display: block;
+}
+
+.form-element-button {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, 190px); 
+  grid-gap: 1rem; 
+  justify-content: space-between; 
+  align-content: flex-start; 
+}
+
+.form-element button {
+  font-size: 2rem;
+  border: 2px solid var(--border-color);
+  border-radius: 5px;
+  padding: 0.25rem;
+  transition: color 200ms ease-in-out;
+  transform: scale(1);  
+}
+
+.btn.close-add-project {
+  transition: background-color 200ms ease-in-out, transform 200ms ease-in-out;
+}
+
+.btn.close-add-project:hover {
+  background-color: rgba(255, 0, 0, 0.8);
+  border: 2px solid rgba(255, 0, 0, 0.5);
+  color: var(--border-color);
+  transform: scale(1.1);  
+
+}
+
+.btn.add-project {
+  transition: background-color 200ms ease-in-out, transform 200ms ease-in-out;
+}
+
+.btn.add-project:hover {
+  background-color: rgba(0, 255, 0, 0.7);
+  border: 2px solid rgba(0, 255, 0, 0.7);
+  color: var(--border-color);
+  transform: scale(1.1);  
+}
+
+/* footer  */
 
 .footer {
   grid-area: footer;
@@ -351,4 +437,9 @@ body h1 {
   text-decoration: none;
   font-weight: 700;
   color: var(--font-color);
+}
+
+/* toggle  */
+.hide {
+  display: none;
 }
