--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -15,7 +15,6 @@
   --border-color: #17252A;
   --border-radius: 15px;
   --green-color: lawngreen;
-  /* --fourth-color: #FEFFFF; */
 }
 
 *,
@@ -193,13 +192,19 @@ body h1 {
   border: 2px solid var(--main-color);
 }
 
-.edit {
-  font-size: 1.5rem;
+.todo-edit-delete {
+  display:flex;
+  justify-content: space-between;
+  padding-left: 1rem;
+}
+
+.todo-edit-delete p{
+  font-size: 1.6rem;
   text-decoration: underline;
   cursor: pointer;
 }
 
-.edit:hover {
+.todo-edit-delete p:hover {
   opacity: 0.7;
 }
 
@@ -282,8 +287,8 @@ body h1 {
 
 .task-properties {
   display: flex;
-  justify-content: space-between;
-  width: 8rem;
+  justify-content: flex-end;
+  width: 14rem;
 }
 
 .task-property {
@@ -291,17 +296,29 @@ body h1 {
   border: 2px solid var(--font-color);
   color: var(--font-color);
   padding: 0.2rem 1rem;
+  margin-right: 0.4rem;
   cursor: pointer;
 }
-/* 
-.task-property.notes {
-  transition: color 150ms;
+
+.due-date {
+  min-width: 5.2rem;
+  text-align: center;
 }
 
-.task-property.notes:hover {
-  color: var(--green-color);
-  border: 2px solid var(--green-color);
-} */
+.add-task-properties {
+  display: flex;
+  justify-content: space-between;
+  width: 17rem;
+}
+
+.date-drop-down {
+  height: 2rem;
+  font-size: 1rem;
+}
+
+.date-drop-down:hover {
+  cursor:pointer;
+}
 
 .task-property.due-date {
   transition: border-color 300ms ease-in-out, color 500ms;
@@ -328,7 +345,7 @@ body h1 {
   width: 100%;
   text-align: center;
   padding: 0.5rem;
-  margin: 0;
+  margin-top: 0.5rem;
   border-top: 2px solid black;
   transition: border 200ms ease-in-out;
 }
@@ -351,7 +368,7 @@ body h1 {
 
 .new-task [type="text"] {
   font-size: 1.5rem;
-  width: 20%;
+  width: 25%;
 }
 
 /* forms  */
