--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -559,8 +559,9 @@ body h1 {
   }
 
   .all-projects {
+    display: none;
     position: absolute;
-    right: -500px;
+    right: 0px;
     height: 100vh;
     width: 50vw;
     margin: 0;
